# Comrade

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: agent.py  runtime.py  tools.py
comrade-canvas (3)/blobs/action-consent-flow/: action-consent-flow.md  onboarding-flow.md
comrade-canvas (3)/blobs/agent-architecture/: agent-architecture.md
comrade-canvas (3)/documents/: ai-voice-guide.md  tool-tech-evaluation.md
comrade-canvas (3)/notes/: from-phase-2-open-question-decided-any-member-can.md  from-phase-2-test-with-studentsngroup-room-visual.md  open-question-share-prompt-ownership-decided-any.md  phase-3-decision-testing-approachndesign-mockup.md
docs/: comrade-platform-findings.md
evaluation/: run.py  runner.py  scenarios.py  scoring.py
pipeline/: compiler.py  parsers.py  worker.py
scripts/: setup_local_roles.sql  smoke_agent.py  smoke_pipeline.py  smoke_runtime.py
server/: app.py
shared/: agent_runs.py  config.py  consent.py  db.py  embeddings.py  nudge.py
supabase/: config.toml
supabase/migrations/: 20260612094142_init.sql  20260612095500_rls.sql  20260612101500_triggers.sql  20260612110000_fix_profiles_policy.sql  20260612120000_action_consent.sql
tests/: _seed.py  conftest.py  rls_isolation_test.sql  test_agent.py  test_agent_runs.py  test_compiler.py  test_consent.py  test_consent_loop.py  test_embeddings.py  test_eval_scoring.py  test_nudge.py  test_parsers.py  test_rls_isolation.py  test_runtime_live.py  test_runtime_mapping.py  test_server.py  test_tools.py  test_triggers.py  test_worker.py
(+27 files in other folders)
