[project]
name = "comrade"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pymupdf4llm>=1.27.2.3",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
